frontend/src/App.css
/* ... */
.option1 {
  margin-top: 3rem;
}
::placeholder {
  color: #fcfbfb; /* Change the color to your desired color */
}

aside a {
  
  font-size: 15px;
  color: #fff;
  display: flex;
  padding: 7px;
 
  height: 3rem;
  text-align: center;
  align-items: center;
  text-decoration: none;
  -webkit-tap-highlight-color: transparent;
}
aside p{
  margin-left: 10px;
  margin-top: 12px;
}

aside a:hover {
  background: rgba(255, 255, 255, 0.25);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(18.5px);
  -webkit-backdrop-filter: blur(18.5px);

  border-top-right-radius: 25px;
  border-bottom-right-radius: 25px;
  margin-right: 20px;
  border: 1px solid rgba(255, 255, 255, 0.18);

  /* 
    color: #3f5efb;
    background: #fff; */
  outline: none;
  position: relative;
  /* background-color: #fff; */
  border-top-left-radius: 25px;
  border-bottom-left-radius: 25px;
}

.delete{
  margin-left: 50px;
  font-size: 20px;
}


@media screen and (max-width: 1100px){
  aside{
    width:10%;
  }
  aside p{
     display: none;
  }
  aside input[type="search"] {
    display: none;
  }
  aside RiDeleteBin6Line{
    display: none;
  }
  .delete{
    display: none;
  }
  aside b{
    font-weight: 400;
  }
}



aside p {
  margin-bottom: 11px;
}

/* ==========================================Section-2 ==================================== */
.section2 {
  width: 55%;
  display: flex;
 
  align-items: center;
  flex-direction: column;
  justify-content: center;

}
/* .swiper {
  margin-left: 0px;
  margin-right: 0px;
} */
.searchbar2{
  width: 100%;
  height:100%;
  display: flex;
  justify-content: center;
    height: 4rem;
   
  align-items: center;
 
}

.section2 input[type="search"] {
  height: 2.5rem;
  width: 60%;
  
}
.section2 h2 {
  color: white;
}

.song_content{
  width:100%;
  height:80vh;
  display: flex;
 
  align-items: center;
  flex-direction:column;
}

/*============================================= Section3 ==================================================*/

.section3 {
  width: 40%;
  display: flex;
  
  align-items: center;
  flex-direction: column;
  height: 100vh;
  
  border-left: 0.2px solid rgba(255, 255, 255, 0.279);
}
.links
{
  display: flex;
  justify-content: center;
  align-items: center;
margin-bottom:15px;
 
}
.link{
  background: rgba(255, 255, 255, 0.25);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(18.5px);
  -webkit-backdrop-filter: blur(18.5px);
  border-radius: 10px;
  padding: 4px;
  margin: 6px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  cursor: pointer;
}

.Card1 {
  background: rgba(255, 255, 255, 0.1);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  height: auto;
  width: 80%;
}

.search-details p{
  font-size: 12px;
}
.Card2 {
  display: flex;
  align-items: center;

  flex-direction: column;
  padding: 15px;
  background: rgba(255, 255, 255, 0.1);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  height: auto;
  max-height:18rem;
  width: 80%;
 margin-top: 1rem;
}
.details2 {
  height: 5rem;
}
.Card2 img {
  border-radius: 15px;
  margin-bottom: 15px;
}
.Card2 p {
  color: white;
  font-size: 14px;
  text-align: center;
}

.player {

  width: 70vh;
  height: 90vh;
  padding: 20px 14px 8px 14px;
  border: none;
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
  display: flex;
  flex-direction: column;
  background-color: #f1f4f5;
  justify-content: space-evenly;
  
}

.search-box {
  width: 50vh;
  height: 90vh;
  max-height: 90vh;
  padding: 20px 14px 8px 14px;
  border: none;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  background-color: #e8ecef;
  display: flex;
  flex-direction: column;
}

.st p {
  font-size: xx-large;
}
.imgBx {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 80%;
}

.imgBx img {
  width: 360px;
  height: 360px;
  border: none;
  border-radius: 10px;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
    rgba(0, 0, 0, 0.22) 0px 10px 10px;
}

.player audio {
  width: 100%;
  border-radius: 6px;
  margin-top: 5%;
  margin-bottom: 5%;
  padding: 0;
  border: none;
  box-shadow: -5px -5px 15px 0px #ffffff9e, 5px 5px 15px 0px #a3b1c6a8;
}



li {
  list-style-type: none;
}

.details {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 2px;
}

.box {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-bottom: 5%;
  gap: 5%;
  height: 30px;
}

.box1 {
  border: 0;
  border-radius: 15px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  text-align: center;
  outline: none;
}

.button {
  border: 0;
  border-radius: 15px;
  width: 70px;
}

.btn-cntrl button {
  background-color: #000;
}

.name {
  margin-top: 20px;
  font-size: x-large;
}

.controls {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  margin-top: 10px;
}

input[type="range"] {
  color: #3a86ff;
  --thumb-height: 1.125em;
  --track-height: 0.125em;
  --track-color: rgba(0, 0, 0, 0.2);
  --brightness-hover: 180%;
  --brightness-down: 80%;
  --clip-edges: 0.125em;
}

.seekbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 15px;
}

#playPauseBtn {
  margin-top: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  border: 0;
  border-radius: 50%;
  width: 60px;
  height: 60px;
}

#seekForward,
#seekBackward,
#next,
#previous {
  background: #f1f4f5;
  border: 0;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin-top: 10px;
}

#next,
#previous {
  width: 50px;
  height: 50px;
  margin-top: 15px;
}
/* ... */

